--- a/NGCD2.ipynb
+++ b/NGCD2.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
      "output_type": "stream",
      "text": [
       "dict_keys(['Nanggroe Aceh Darussalam', 'Sumatera Selatan', 'Kalimantan Barat', 'Jawa Timur', 'Sulawesi Selatan', 'Maluku'])\n",
-      "['Ambon']\n"
+      "['Surabaya']\n"
      ]
     }
    ],
@@ -86,7 +86,7 @@
     "provinsi = {'Nanggroe Aceh Darussalam': 'Aceh','Sumatera Selatan': 'Palembang','Kalimantan Barat': 'Pontianak','Jawa Timur': 'Madiun','Sulawesi Selatan': 'Makassar','Maluku': 'Ambon'}\n",
     "\n",
     "print(provinsi.keys())\n",
-    "provinsi['Jawa Timur'] = ['Ambon']\n",
+    "provinsi['Jawa Timur'] = ['Surabaya']\n",
     "\n",
     "print(provinsi['Jawa Timur'])"
    ]
